Remove preview features